--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
                         </div>
                     </div>
                 </div>
+
+                <button id="addToCalendarBtn">📅 Add to Calendar</button>
+
                 
                 <button id="copyClipboard">📋 Copy</button>
             </div>
